# llm-autogenerate-sv

./: .gitignore  CONTRIBUTING.md  HUMAN.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: PROJECT-GUIDELINES.md  copilot-instructions.md
.github/workflows/: ci.yml
input/openapi/: eligibility-api-v1.yaml
input/scenarios/: eligibility-scenarios.yaml
input/test-data-rules/: eligibility-data-rules.yaml
scripts/: run-local-mock.sh  run-mcp.sh  start-wiremock.sh  stop-wiremock.sh
sv_generator/: __init__.py  __main__.py  cli.py  core.py  docs.py  generator.py  mcp_server.py  openapi_loader.py  postman.py  report.py  rules_loader.py  scenario_loader.py  server.py  validator.py
tests/: test_generator.py  test_mcp_server.py  test_openapi_loader.py  test_scenario_loader.py  test_server.py  test_smoke_wiremock.py  test_validator.py
